@@ -1,4 +1,5 @@
 0.02
+ - Update examples/ directory.
 
 0.01 2020-05-01T18:15:58+02:00
  - First version.
